<resources>
    <string name="app_name">OTMA</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_cerveja">CervejaActivity</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_categorias">Categorias</string>
    <string name="menu_carrinho">Carrinho</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_sair">Sair</string>
    <string name="txtLogin">Login</string>
    <string name="txtCarrinho">Carrinho</string>
    <string name="txtSair">Sair</string>
    <string name="txtCerveja">Cerveja</string>
    <string name="txtInicio">Inicio</string>
    <string name="txtEsqueciSenha">Esqueci minha senha</string>
    <string name="btnEntrar">entrar</string>
    <string name="txtFacaCadastro">Não tem cadastro? Cadastre-se</string>
    <string name="txtcadastro">Cadastro</string>
    <string name="edtxtNome">Nome completo</string>
    <string name="edtxtCPF">CPF</string>
    <string name="edtxtNumero">(DDD) + Número</string>
    <string name="edtxtIdade">Idade</string>
    <string name="edtxtEmail">E-mail</string>
    <string name="edtxtSenha">Senha</string>
    <string name="edtxtConfSenha">Confirmar senha</string>
    <string name="chkPolitica">Política de privacidade</string>
    <string name="btnCadastrar">cadastrar</string>
    <string name="txtFacaLogin">Tem cadastro? Faça login</string>
    <string name="txtDelivery">Delivery</string>
    <string name="txtCategoria">Categorias</string>
    <string name="txtPopulares">Populares</string>
    <string name="txtVinho">Vinhos</string>
    <string name="txtDestilados">Destilados</string>
    <string name="txtsemAlcool">Sem álcool</string>
    <string name="txtCervejas">Cervejas</string>
    <string name="txtEconimizePopular1">Economize R$30,00</string>
    <string name="txtTitlePopulares1">Whisky Jake Daniels - 1L</string>
    <string name="precoAntigoPopulares1"><s>R$82,00</s></string>
    <string name="precoAtualPopulares1">R$52,00</string>
    <string name="txtAdicionePopulares">Adicionar</string>
    <string name="txtEconimizePopular2">Economize R$50,00</string>
    <string name="precoAntigoPopulares2"><s>R$120,89</s></string>
    <string name="precoAtualPopulares2">R$70,00</string>
    <string name="txtTitlePopulares2">Vinho Tinto - 750ml</string>
    <string name="txtEconimizePopular3">Economize R$10,00</string>
    <string name="txtTitlePopulares3">Suco de Del Valle - 1L</string>
    <string name="precoAntigoPopulares3"><s>R$12,00</s></string>
    <string name="precoAtualPopulares3">R$2,00</string>
    <string name="txtdiminuirItem">-</string>
    <string name="txtaumentarItem">+</string>
    <string name="txtqtd">1</string>
    <string name="txtskol">Skol</string>
    <string name="txtskol1">Skol 269ml</string>
    <string name="txtprecoSkol1">R$2,29</string>
    <string name="txtadicionar">adicionar</string>
    <string name="txtSkol2">Skol 473ml</string>
    <string name="txtprecoSkol2">R$3,29</string>
    <string name="txtSkol3">Skol Puro Malte 269ml</string>
    <string name="txtprecoSkol3">R$2,39</string>
    <string name="txtSkol4">Skol Puro Malte 473ml</string>
    <string name="txtprecoSkol4">R$3,39</string>
    <string name="txtSkol5">Skol Hops 269ml</string>
    <string name="txtprecoSkol5">R$2,79</string>
    <string name="txtSkol6">Skol Hops 473ml</string>
    <string name="txtprecoSkol6">R$3,49</string>
    <string name="txtBrahma">Brahma</string>
    <string name="txtBrahma1">Brahma Chopp 350ml</string>
    <string name="txtprecoBrahma1">R$2,49</string>
    <string name="txtBrahma2">Brahma Duplo Malte 350ml</string>
    <string name="txtprecoBrahma2">R$3,09</string>
    <string name="txtBrahma3">Brahma Malzbier 355ml</string>
    <string name="txtprecoBrahma3">R$3,39</string>
    <string name="txtBrahma4">Brahma Zero 350ml</string>
    <string name="txtprecoBrahma4">R$3,29</string>
    <string name="txtBrahma5">Brahma Extra Lager 350ml</string>
    <string name="txtprecoBrahma5">R$2,99</string>
    <string name="txtHeineken">Heineken</string>
    <string name="txtHeineken1">Heineken 250ml</string>
    <string name="txtprecoHeineken1">R$3,79</string>
    <string name="txtHeineken2">Heineken 330ml</string>
    <string name="txtprecoHeineken2">R$4,99</string>
    <string name="txtHeineken3">Heineken 600ml</string>
    <string name="txtprecoHeineken3">R$9,79</string>
    <string name="txtStella">Stella Artois</string>
    <string name="txtStella1">Stella Artois 269ml</string>
    <string name="txtprecoStella1">R$3,79</string>
    <string name="txtStella2">Stella Artois 330ml</string>
    <string name="txtprecoStella2">R$4,99</string>
    <string name="txtStella3">Stella Artois 550ml</string>
    <string name="txtprecoStella3">R$8,99</string>
    <string name="txtColorado">Colorado</string>
    <string name="txtColorado1">Colorado Appia 600ml</string>
    <string name="txtprecoColorado1">R$10,90</string>
    <string name="txtColorado2">Colorado Nassau 600ml</string>
    <string name="txtprecoColorado2">R$14,99</string>
    <string name="txtColorado3">Colorado Ribeirão 600ml</string>
    <string name="txtprecoColorado3">R$10,90</string>
    <string name="txtColorado4">Colorado Murica 600ml</string>
    <string name="txtprecoColorado4">R$14,99</string>
    <string name="txtTinto">Vinhos Tintos</string>
    <string name="txtTinto1">Vinho San Martin Tinto Suave 750ml</string>
    <string name="txtprecoTinto1">R$10,90</string>
    <string name="txtTinto2">Vinho Chilano Cabernet Sauvignon 750ml</string>
    <string name="txtprecoTinto2">R$24,90</string>
    <string name="txtTinto3">Vinho Santa Helena Reservado Cabernet Sauvignon 750ml</string>
    <string name="txtprecoTinto3">R$30,45</string>
    <string name="txtTinto4">Vinho Tinto Pérgola Suave 1L</string>
    <string name="txtprecoTinto4">R$24,90</string>
    <string name="txtTinto5">Vinho Trapiche Malbec 750ml</string>
    <string name="txtprecoTinto5">R$48,50</string>
    <string name="txtBranco">Vinhos Brancos</string>
    <string name="txtBranco1">Vinho Concha Y Toro Chardonnay 750ml</string>
    <string name="txtprecoBranco1">R$32,99</string>
    <string name="txtBranco2">Vinho Portillo Sauvignon Blanc 750ml</string>
    <string name="txtprecoBranco2">R$90,10</string>
    <string name="txtBranco3">Vinho Branco Casal Garcia Sweet 750ml</string>
    <string name="txtprecoBranco3">R$73,90</string>
    <string name="txtBranco4">Vinho Castellani Pinot Grigio 750ml</string>
    <string name="txtprecoBranco4">R$42,00</string>
    <string name="txtRose">Vinhos Rosés</string>
    <string name="txtRose1">Vinho Rosé Freixenet Italian 750ml</string>
    <string name="txtprecoRose1">R$81,60</string>
    <string name="txtRose2">Vinho Veroni Rosé</string>
    <string name="txtprecoRose2">R$79,00</string>
    <string name="txtRose3">Vinho Rose Mioranza Frisante Suave 750ml</string>
    <string name="txtprecoRose3">R$29,00</string>
    <string name="txtBeats">Beats</string>
    <string name="txtBeats1">Beats Senses 269ml</string>
    <string name="txtprecoBeats1">R$4,49</string>
    <string name="txtBeats2">Beats GT 269ml</string>
    <string name="txtprecoBeats2">R$5,19</string>
    <string name="txtBeats3">Beats 150 BPM 100ml</string>
    <string name="txtprecoBeats3">R$3,89</string>
    <string name="txtBeats4">Beats Zodiac Água 269ml</string>
    <string name="txtprecoBeats4">R$4,99</string>
    <string name="txtBeats5">Beats Zodiac Ar 269ml</string>
    <string name="txtprecoBeats5">R$4,99</string>
    <string name="txtBeats6">Beats Zodiac Fogo 269ml</string>
    <string name="txtprecoBeats6">R$4,99</string>
    <string name="txtBeats7">Beats Zodiac Terra 269ml</string>
    <string name="txtprecoBeats7">R$4,99</string>
    <string name="txtVodka">Vodka</string>
    <string name="txtVodka1">Vodka Smirnoff 998ml</string>
    <string name="txtprecoVodka1">R$35,99</string>
    <string name="txtVodka2">Vodka Balalaika 1L</string>
    <string name="txtprecoVodka2">R$13,90</string>
    <string name="txtVodka3">Vodka Askov 900ml</string>
    <string name="txtprecoVodka3">R$14,00</string>
    <string name="txtVodka4">Vodka Moscowita 965ml</string>
    <string name="txtprecoVodka4">R$8,80</string>
    <string name="txtWhisky">Whisky</string>
    <string name="txtWhisky1">Whisky Johnnie Walker Red Label 1L</string>
    <string name="txtprecoWhisky1">R$89,90</string>
    <string name="txtWhisky2">Whisky White Horse 1L</string>
    <string name="txtprecoWhisky2">R$79,00</string>
    <string name="txtWhisky3">Whisky Jack Daniels 1L</string>
    <string name="txtprecoWhisky3">R$149,00</string>
    <string name="txtWhisky4">Whisky Ballantines 1L</string>
    <string name="txtprecoWhisky4">R$94,99</string>
    <string name="txtGin">Gin</string>
    <string name="txtGin1">Gin Tanqueray 750ml</string>
    <string name="txtprecoGin1">R$119,00</string>
    <string name="txtGin2">Gin Seagers 980ml</string>
    <string name="txtprecoGin2">R$39,99</string>
    <string name="txtGin3">Gin Gordon’s London Dry 750ml</string>
    <string name="txtprecoGin3">R$69,99</string>
    <string name="txtCachaca">Cachaça</string>
    <string name="txtCachaca1">Cachaça 51 965ml</string>
    <string name="txtprecoCachaca1">R$9,99</string>
    <string name="txtCachaca2">Cachaça Corote 500ml</string>
    <string name="txtprecoCachaca2">R$3,39</string>
    <string name="txtCachaca3">Aguardente Velho Barreiro 910ml</string>
    <string name="txtprecoCachaca3">R$9,90</string>
    <string name="txtRefri">Refrigerantes</string>
    <string name="txtRefri1">Coca-Cola 350ml</string>
    <string name="txtprecoRefri1">R$2,99</string>
    <string name="txtRefri2">Guaraná Antarctica 350ml</string>
    <string name="txtprecoRefri2">R$2,39</string>
    <string name="txtRefri3">Pepsi 350ml</string>
    <string name="txtprecoRefri3">R$2,49</string>
    <string name="txtRefri4">Fanta Laranja 350ml</string>
    <string name="txtprecoRefri4">R$2,89</string>
    <string name="txtRefri5">Tônica Antarctica 350ml</string>
    <string name="txtPagamento">Pagamento</string>
    <string name="txtsubtotal">Subtotal</string>
    <string name="txtvalorSubtotal">R$554,00</string>
    <string name="txtTaxaEntrega">Taxa de entrega</string>
    <string name="txtValorTaxa">R$5,00</string>
    <string name="txtTotal">Total</string>
    <string name="txtValorTotal">R$559,00</string>
    <string name="btnConfirmarPedido">Confirmar pedido</string>
    <string name="txtEndereco">Endereço</string>
    <string name="txtFormaPagto">Forma de pagamento</string>
    <string name="txtSelecionarFormaPagto">Selecionar pagamento</string>
    <string name="txtPagamentoAPP">Pagamento pelo app</string>
    <string name="txtCartaoCredito">Cartão de Crédito</string>
    <string name="txtPagamentoEntrega">Pagamento na entrega</string>
    <string name="txtCartaoCreditoDebito">Cartão de Débito ou Crédito</string>
    <string name="txtDinheiro">Dinheiro</string>
    <string name="txtNumeroCartao">Número do cartão</string>
    <string name="txtNomeTitular">Nome do titular</string>
    <string name="txtValidade">Validade</string>
    <string name="txtCVV">CVV</string>
    <string name="txtTroco">Preciso de troco</string>
    <string name="txtTotalCompra">Valor da compra: R$559,00</string>
    <string name="txtValorTroco">Troco para quanto?</string>
    <string name="txtSelecionarEndereco">Selecionar endereço</string>
    <string name="btnSalvar">Salvar</string>
</resources>