<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
>
    <item android:id= "@+id/iteminicio"
          android:title="@string/txtInicio"
        android:icon="@drawable/ic_baseline_home">
    </item>

    <item
        android:id="@+id/itemcategorias"
        android:title="@string/menu_categorias"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/categoria_cerveja"
                android:icon="@drawable/beer"
                android:title="@string/txtCerveja" />
            <item
                android:id="@+id/categoria_vinho"
                android:icon="@drawable/wine_bottle"
                android:title="@string/txtVinho"></item>
            <item
                android:id="@+id/categoria_destilados"
                android:icon="@drawable/acool"
                android:title="@string/txtDestilados"></item>
            <item
                android:id="@+id/categoria_semAlcool"
                android:icon="@drawable/no_alcohol"
                android:title="@string/txtsemAlcool"></item>

        </menu>
    </item>

    <item
        android:id="@+id/itemperfil"
        android:title="@string/menu_perfil"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/itemcarrinho"
                android:contentDescription="@string/menu_inicio"
                android:icon="@drawable/ic_shopping_cart"
                android:title="@string/txtCarrinho"></item>
            <item
                android:id="@+id/itemsair"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/txtSair"></item>
        </menu>
    </item>


</menu>