<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPagamentoAPP"
                android:textColor="@color/cor_principal"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:fontFamily="@font/montserrat"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_baseline_credit_card_24"
                    android:backgroundTint="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txtCartaoCredito"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginLeft="8dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/inputNumeroCartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:inputType="number"
                android:hint="@string/txtNumeroCartao"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textColorHint="@color/cor_cinza"
                android:background="@drawable/border"
                android:padding="4dp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputNomeTitular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/border"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/txtNomeTitular"
                android:inputType="textPersonName"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textColorHint="@color/cor_cinza"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputValidade"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:inputType="number"
                    android:hint="@string/txtValidade"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cor_cinza"
                    android:background="@drawable/border"
                    android:padding="4dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/inputCVV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="4dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:inputType="number"
                    android:hint="@string/txtCVV"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/cor_cinza"
                    android:background="@drawable/border"
                    android:padding="4dp"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPagamentoEntrega"
                android:textColor="@color/cor_principal"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:fontFamily="@font/montserrat"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_baseline_credit_card_24"
                    android:backgroundTint="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txtCartaoCreditoDebito"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginLeft="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_money_24"
                    android:backgroundTint="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txtDinheiro"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginLeft="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTroco"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/cor_cinza"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTotalCompra"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/cor_cinza"
                    android:layout_marginLeft="49dp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/inputTroco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:inputType="numberDecimal"
                android:hint="@string/txtValorTroco"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textColorHint="@color/cor_cinza"
                android:background="@drawable/border"
                android:padding="4dp"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <Button
                android:id="@+id/btnSalvarFormaPagto"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_view"
                android:fontFamily="@font/montserrat"
                android:text="@string/btnSalvar"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/cor_principal"
                app:iconTint="@color/white" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>