<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:gravity="fill"
    android:orientation="vertical"
    android:paddingTop="16dp"
    tools:context=".CarrinhoActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- HEADER -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <ImageButton
                android:id="@+id/btnvoltar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_baseline_keyboard_backspace"
                android:backgroundTint="@color/black"
                android:onClick="voltar" />

            <TextView
                android:id="@+id/titulo_carrinho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/montserrat"
                android:text="@string/txtPagamento"
                android:textAllCaps="true"
                android:textColor="@color/cor_principal"
                android:textSize="28sp" />

        </RelativeLayout>

        <!-- INFORMAÇÕES DO PEDIDO -->
        <RelativeLayout
            android:id="@+id/card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:background="@color/cor_cinza">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txtsubtotal"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txtTaxaEntrega"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txtTotal"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="end"
                    android:text="@string/txtvalorSubtotal"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="end"
                    android:text="@string/txtValorTaxa"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="end"
                    android:text="@string/txtValorTotal"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <!-- ENCAMINHAR PARA VIEW LOCALIZAÇÃO -->
        <LinearLayout
            android:id="@+id/viewEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="48dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/border">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_cartao" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txtEndereco"
                    android:textColor="@color/cor_cinza"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txtSelecionarEndereco"
                    android:textColor="@color/cor_cinza"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp">

                <ImageButton
                    android:layout_width="43dp"
                    android:layout_height="47dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_sinal_de_maior" />

            </RelativeLayout>

        </LinearLayout>

        <!-- ENCAMINHAR PARA VIEW FORMA DE PAGAMENTO -->
        <LinearLayout
            android:id="@+id/viewFormaPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="48dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/border">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_local" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txtFormaPagto"
                    android:textColor="@color/cor_cinza"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/txtSelecionarFormaPagto"
                    android:textColor="@color/cor_cinza"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp">

                <ImageButton
                    android:layout_width="43dp"
                    android:layout_height="47dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_sinal_de_maior" />

            </RelativeLayout>

        </LinearLayout>

        <!-- BOTÃO CONFIRMAR PEDIDO -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btnConfirmarPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="52dp"
                android:background="@drawable/rounded_view"
                android:fontFamily="@font/montserrat"
                android:text="@string/btnConfirmarPedido"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/cor_principal"
                app:iconTint="@color/white" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>